# training_preparation

./: .gitignore  README.md  main.py  pyproject.toml  run_merge.bat  run_merge2.bat
automation/: combined_data.csv  data_pipeline.py  merge_data.py  merge_data_simple.py  report_generator.py  scheduler_setup.md
datasets/: customer_data.csv  product_catalog.csv  sales_data.csv  survey_results.csv  web_traffic.csv
exercises/: comprehensive_exercises.ipynb
notebooks/: 01_python_quickstart.ipynb  01_python_quickstart_demo.ipynb  02_pandas_basics.ipynb  02_pandas_basics_demo.ipynb  03_data_visualization.ipynb  03_data_visualization_demo.ipynb  04_advanced_pandas.ipynb  04_advanced_pandas_demo.ipynb  05_data_cleaning.ipynb  05_data_cleaning_demo.ipynb  06_pipeline_automation.ipynb  06_pipeline_automation_demo.ipynb
python_files/: 01_python_quickstart.py  02_pandas_basics.py  03_data_visualization.py  04_advanced_pandas.py  05_data_cleaning.py  06_pipeline_automation.py  comprehensive_exercises.py  comprehensive_exercises_solutions.py  generate_datasets.py  verify_setup.py
solutions/: comprehensive_exercises_solutions.ipynb
