[project]
name = "training-preparation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "matplotlib>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
